force-app/main/default/objects/WheelContractLine__c/WheelContractLine__c.object-meta.xml
<CustomObject>
    <label>Wheel Contract Line</label>
    <nameField>
        <label>Contract Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wheel Contract Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>