force-app/main/default/objects/WheelContractLine__c/fields/Inq_Price__c.field-meta.xml
<CustomField>
    <fullName>Inq_Price__c</fullName>
    <label>Inq. Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>