force-app/main/default/objects/WheelContractLine__c/fields/InqQty__c.field-meta.xml
<CustomField>
    <fullName>InqQty__c</fullName>
    <label>Inq. Qty</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>