force-app/main/default/objects/WheelContractLine__c/fields/MeasUnit__c.field-meta.xml
<CustomField>
    <fullName>MeasUnit__c</fullName>
    <label>Meas.Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MeasurementUnits</valueSetName>
    </valueSet>
</CustomField>