force-app/main/default/objects/WheelContractLine__c/fields/Price_t__c.field-meta.xml
<CustomField>
    <fullName>Price_t__c</fullName>
    <label>Price (per t.)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>