force-app/main/default/objects/WheelContractLine__c/fields/ProdSaleItem__c.field-meta.xml
<CustomField>
    <fullName>ProdSaleItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prod Sale Item</label>
    <referenceTo>ProdSaleItem__c</referenceTo>
    <relationshipLabel>Wheel Contract Lines</relationshipLabel>
    <relationshipName>Wheel_Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>