force-app/main/default/objects/WheelContractLine__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Type__c</field>
            <operation>equals</operation>
            <value>Wheel, Tyre, Axle, Wheel set</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Wheel Contract Lines</relationshipLabel>
    <relationshipName>Wheel_Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>