force-app/main/default/objects/WheelContractLine__c/fields/Qty_t__c.field-meta.xml
<CustomField>
    <fullName>Qty_t__c</fullName>
    <label>Qty (t)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>