force-app/main/default/objects/WheelContractLine__c/fields/ShippingDate__c.field-meta.xml
<CustomField>
    <fullName>ShippingDate__c</fullName>
    <label>Shipping Date</label>
    <type>Date</type>
</CustomField>