force-app/main/default/objects/WheelContractLine__c/fields/ShippingPoint__c.field-meta.xml
<CustomField>
    <fullName>ShippingPoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Point</label>
    <referenceTo>ShippingPoint__c</referenceTo>
    <relationshipLabel>Wheel Contract Lines</relationshipLabel>
    <relationshipName>Wheel_Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>