force-app/main/default/objects/WheelContractLine__c/fields/WheelContract__c.field-meta.xml
<CustomField>
    <fullName>WheelContract__c</fullName>
    <label>Wheel Contract</label>
    <referenceTo>WheelContract__c</referenceTo>
    <relationshipLabel>Wheel Contract Lines</relationshipLabel>
    <relationshipName>Wheel_Contract_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>